apply plugin: 'java-library'

version '8.0'

sourceCompatibility = JavaVersion.VERSION_1_8

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

repositories{
    mavenCentral()
    jcenter()
    maven{ url 'https://www.jitpack.io' }
}

ext{
    targetversion = 'v104'
}

test{
    testLogging.showStandardStreams = true
}

compileJava {options.encoding = "UTF-8"}

dependencies{
    compileOnly "com.github.Anuken.Arc:arc-core:$targetversion"
    compileOnly "com.github.Anuken.Mindustry:core:$targetversion"
    //compileOnly files("C:\\Users\\cloud\\Desktop\\Mindustry-master\\core\\build\\libs\\core-release.jar")

    // json
    compile group: 'org.hjson', name: 'hjson', version: '3.0.0'

    // version check
    compile group: 'org.apache.maven', name: 'maven-artifact', version: '3.0.3'

    // encrypt library
    compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.1'

    // JSOUP library
    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'

    // Discord
    compile ('net.dv8tion:JDA:4.0.0_73') {
        exclude module: 'opus-java'
    }
    compile 'org.slf4j:slf4j-nop:1.7.25'


    compile group: 'org.simplejavamail', name: 'simple-java-mail', version: '6.0.3'
    compile group: 'org.simplejavamail', name: 'batch-module', version: '6.0.3'
}

jar{
    version = null
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }

        configurations
                .compile
                .findAll { !it.name.endsWith('pom') }
                .collect { it.isDirectory() ? it : zipTree(it) }
    }
}